@@ -14,19 +14,17 @@ namespace MCDawn
 
         public static void Warn(Player p)
         {
-            if (Server.swearWarnPlayer && p != null) { p.swearWordsUsed++; }
+            if (Server.swearWarnPlayer && p != null) p.swearWordsUsed++;
             if (p.swearWordsUsed >= Server.swearWordsRequired && p != null)
-            {
-                if (Server.profanityFilterOp == true)
-                {
+                if (Server.profanityFilterOp || (!Server.profanityFilterOp && p.group.Permission < LevelPermission.Operator))
                     switch (Server.profanityFilterStyle)
                     {
                         case "Kick":
-                            Command.all.Find("kick").Use(null, p.name + " You were kicked for excessive use of swear words!");
-                            break;
+                            p.Kick("You were kicked for excessive use of swear words!");
+                            return;
                         case "TempBan":
                              Command.all.Find("tempban").Use(null, p.name + " " + Server.antiSpamTempBanTime.ToString());
-                             break;
+                             return;
                         case "Mute":
                              Command.all.Find("mute").Use(null, p.name);
                              break;
@@ -54,52 +52,8 @@ namespace MCDawn
 
                              unchecked { p.SendPos((byte)-1, p.pos[0], (ushort)(foundHeight * 32), p.pos[2], p.rot[0], p.rot[1]); }
                              break;
+                         default: goto case "Kick";
                     }
-                }
-                else
-                {
-                    if (p.group.Permission < LevelPermission.Operator)
-                    {
-                        switch (Server.antiCapsStyle)
-                        {
-                            case "Kick":
-                                Command.all.Find("kick").Use(null, p.name + " You were kicked for excessive use of swear words!");
-                                break;
-                            case "TempBan":
-                                Command.all.Find("tempban").Use(null, p.name + " " + Server.profanityFilterTempBanTime.ToString());
-                                break;
-                            case "Mute":
-                                Command.all.Find("mute").Use(null, p.name);
-                                break;
-                            case "Slap":
-                                ushort currentX = (ushort)(p.pos[0] / 32);
-                                ushort currentY = (ushort)(p.pos[1] / 32);
-                                ushort currentZ = (ushort)(p.pos[2] / 32);
-                                ushort foundHeight = 0;
-
-                                for (ushort yy = currentY; yy <= 1000; yy++)
-                                {
-                                    if (!Block.Walkthrough(p.level.GetTile(currentX, yy, currentZ)) && p.level.GetTile(currentX, yy, currentZ) != Block.Zero)
-                                    {
-                                        foundHeight = (ushort)(yy - 1);
-                                        p.level.ChatLevel(p.color + p.name + Server.DefaultColor + " was slapped into the roof for excessive use of swear words!");
-                                        break;
-                                    }
-                                }
-
-                                if (foundHeight == 0)
-                                {
-                                    p.level.ChatLevel(p.color + p.name + Server.DefaultColor + " was slapped sky high for excessive use of swear words!");
-                                    foundHeight = 1000;
-                                }
-
-                                unchecked { p.SendPos((byte)-1, p.pos[0], (ushort)(foundHeight * 32), p.pos[2], p.rot[0], p.rot[1]); }
-                                break;
-                        }
-                    }
-                }
-                return;
-            }
 
             if (Server.swearWarnPlayer && p != null)
             {
@@ -112,22 +66,21 @@ namespace MCDawn
         {
             try
             {
-                StringBuilder sb = new StringBuilder(message);
                 string path = "text/swearwords.txt";
                 if (File.Exists(path))
                 {
                     foreach (string line in File.ReadAllLines(path))
                     {
-                        if (line[0] != '#' && line != "" && line != null)
+                        if (line != null && line.Trim()[0] != '#' && line.Trim() != "")
                         {
                         recheck:
-                            if (line.Trim().IndexOf(' ') == -1)
+                            if (!line.Trim().Contains(" "))
                             {
-                                if (sb.ToString().ToLower().Contains(line.ToLower()))
+                                if (message.ToLower().Contains(line.Trim().ToLower()))
                                 {
-                                    int savedIndex = sb.ToString().ToLower().IndexOf(line.ToLower());
-                                    sb.Remove(savedIndex, line.Trim().Length);
-                                    sb.Insert(savedIndex, "&c<censored>&f");
+                                    int savedIndex = message.ToLower().IndexOf(line.Trim().ToLower());
+                                    message = message.Remove(savedIndex, line.Trim().Length);
+                                    message = message.Insert(savedIndex, "&c<censored>&f");
                                     //message = message.Replace(line.Trim(), "&c<censored>&f"); // Meh too lazy to test again.
                                     if (p != null) { Warn(p); }
                                     goto recheck;
@@ -135,11 +88,11 @@ namespace MCDawn
                             }
                             else
                             {
-                                if (sb.ToString().ToLower().Contains(line.Split(' ')[0].ToLower()))
+                                if (message.ToLower().Contains(line.Split(' ')[0].ToLower()))
                                 {
-                                    int savedIndex = message.ToLower().IndexOf(line.Split(' ')[0].ToLower());
-                                    sb.Remove(savedIndex, line.Trim().Split(' ')[0].Length);
-                                    sb.Insert(savedIndex, "&c" + line.Split(' ')[1] + "&f");
+                                    int savedIndex = message.ToLower().IndexOf(line.Trim().Split(' ')[0].ToLower());
+                                    message = message.Remove(savedIndex, line.Trim().Split(' ')[0].Length);
+                                    message = message.Insert(savedIndex, "&c" + line.Trim().Split(new char[] { ' ' }, 2)[1] + "&f");
                                     if (p != null) { Warn(p); }
                                     goto recheck;
                                 }
@@ -148,7 +101,7 @@ namespace MCDawn
                     }
                 }
                 else { File.Create("text/swearwords.txt").Close(); }
-                return sb.ToString();
+                return message;
             }
             catch (Exception e) { Server.ErrorLog(e); return message; }
         }
