@@ -13,7 +13,9 @@ MCDawn 1.0.1.4
 -If MySQL is not configured properly the error log will also show now.
 -CRITICAL: Updated minecraft.net server list heartbeat url from http://www.minecraft.net/heartbeat.jsp to https://minecraft.net/heartbeat.jsp.
 -Added !url IRC command (Type !url in the channel of the IRC bot and the server will say the URL of the server).
-	
+-ProfanityFilter fixed to work properly, and not throw OutOfMemoryExceptions.
+-Anti-Caps and Anti-Spam features fixed to work properly now.
+
 MCDawn 1.0.1.3
 -Color codes are no longer sent to IRC/Global.
 -Ranking/banning 'reasons' can now be assigned.
